--- a/API/SkdRefSiteAPI.DAO/SkdRefSiteAPI.DAO.csproj
+++ b/API/SkdRefSiteAPI.DAO/SkdRefSiteAPI.DAO.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
