--- a/API/Critique.DAO/SkdAPI.ArtCrit.DAO.csproj
+++ b/API/Critique.DAO/SkdAPI.ArtCrit.DAO.csproj
@@ -8,7 +8,11 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SkdAPI.Common\SkdAPI.Common.csproj" />
   </ItemGroup>
 
 </Project>
