--- a/API/SkdRefSiteAPI/appsettings.json
+++ b/API/SkdRefSiteAPI/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Environment":  "prod",
+  "Environment":  "dev",
   "Auth0": {
     "Domain": "sketchdaily.auth0.com",
     "ApiIdentifier": "wRDNX5h0PEhA4Aj9v0377m6yb7in4A84"
