--- a/API/Critique.DAO/SkdAPI.ArtCrit.DAO.csproj
+++ b/API/Critique.DAO/SkdAPI.ArtCrit.DAO.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>SkdAPI.ArtCrit.DAO.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
