--- a/API/SkdRefSiteAPI.DAO/SkdAPI.RefSite.DAO.csproj
+++ b/API/SkdRefSiteAPI.DAO/SkdAPI.RefSite.DAO.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>SkdAPI.RefSite.DAO.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
